--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <h1>GenValidation</h1>
     <p>GenValidation is a simple validation for MadGraph generator.</p>
     <h2>VBS ZZ process</h2>
-    <p>It contains sample generated from <b>MadGraph5 ver 2.9.18</b>(master branch), <b>ver 3.5.2</b> and <b>ver 3.5.x</b></p>
-    <p><a href="result_VBS/index.html">VBS ZZ</a></p>
+    <p>It contains sample generated from <b>MadGraph5 ver 2.9.18</b>(master branch), <b>ver 3.5.2</b> and <b>ver 3.5.x</b>
+    <a href="result_VBS/index.html"> >> VBS ZZ analysis collection</a></p>
+    <h3> Log files Download</h3>
+    <p>Click to view: <a href="logfile/VBSZZ/master.log"> master(2.9.18)</a>, <a href="logfile/VBSZZ/mg352.log">mg352(3.5.2)</a>, <a href="logfile/VBSZZ/mg35x.log">mg35x(3.5.6)</a>
+    </p>
     <h2>Test</h2>
     <p>This part is for test.</p>
     <p><a href="output_VBS/index.html">VBS ZZ</a></p>
